Ajustes em classes e criação da camada de Dados

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/Dotnet.gitignore
 
+# Visual Studio
+.vs/
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
@@ -54,4 +57,4 @@ TestResult.xml
 nunit-*.xml
 
 
-.vs/
+.vs/Blog
