--- a/Blog/Blog.Api.Rest/Blog.Api.Rest.csproj
+++ b/Blog/Blog.Api.Rest/Blog.Api.Rest.csproj
@@ -8,6 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Blog.Application\Blog.Application.csproj" />
+    <ProjectReference Include="..\Blog.Infra.Data\Blog.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
