--- a/Blog/Blog.Test/Blog.Test.csproj
+++ b/Blog/Blog.Test/Blog.Test.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Blog.Repository\Blog.Repository.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
