--- a/Blog/Blog.Repository/Blog.Repository.csproj
+++ b/Blog/Blog.Repository/Blog.Repository.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Blog.Domain\Blog.Domain.csproj" />
+    <ProjectReference Include="..\Blog.Infra.Data\Blog.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
