--- a/Blog/Blog.Service/Blog.Service.csproj
+++ b/Blog/Blog.Service/Blog.Service.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Blog.Domain\Blog.Domain.csproj" />
+    <ProjectReference Include="..\Blog.Repository\Blog.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
